venndb-usage/tests/fails/filter_any_bool.rs
use venndb::VennDB;

#[derive(Debug, VennDB)]
struct Employee {
    #[venndb(filter, any)]
    is_alive: bool,
}

fn main() {}
