venndb-usage/tests/fails/filter_any_bool.stderr
error: Invalid field-level `venndb` attribute
       `any` cannot be used with `bool`
 --> tests/fails/filter_any_bool.rs:6:15
  |
6 |     is_alive: bool,
  |               ^^^^
